fix: Changed z-index

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
 	position: relative;
 	width: 100%;
 	top: 0;
-	z-index: 999;
+	z-index: 1000;
 	transition: var(--transition-primary);
 	
 	.Header__container {
